--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,25 @@
 
 .metadata/
 
+# === Jenkins 관련 ===
+.jenkins/           # Jenkins 홈 디렉토리 (로컬 테스트 시 생성됨)
+*.jenkinsfile       # Jenkins 설정 파일이지만 템플릿일 경우 무시할 수도 있음
+*.jenkins_backup    # Jenkins 관련 백업 파일
+
+# Jenkins 자동 빌드 작업 디렉토리
+workspace/
+builds/
+jobs/
+logs/
+*.log
+
+# Jenkins에 의해 생성되는 빌드 아카이브
+*.lastSuccessful
+*.lastFailed
+
+# Jenkinsfile 자동 생성 캐시 (선택)
+.pipeline/          # 일부 Jenkins 플러그인에서 생성됨
+
 
 
 # Compiled class file
