--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@
 *.msi
 
 
+# === Eclipse IDE 및 JRE 포함 폴더 무시 ===
+**/eclipse/
+**/plugins/
+**/jre/
+
+
 # === Jenkins 관련 ===
 .jenkins/           # Jenkins 홈 디렉토리 (로컬 테스트 시 생성됨)
 *.jenkinsfile       # Jenkins 설정 파일이지만 템플릿일 경우 무시할 수도 있음
